<resources>
    <string name="app_name">TaskIt</string>
    <string name="title_activity_my_tasks">myTasksActivity</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register User</string>
    <string name="create_user">Create</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="register_new">Register</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Start_Searching">Button</string>
    <string name="Task_Name">Name</string>
    <string name="Task_Description">Description</string>
    <string name="status">Status</string>
    <string name="price">Price</string>
    <string name="bid">Bid</string>
    <string name="biddings">Biddings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="enter_query">Enter query</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="my_tasks">My Tasks</string>
    <string name="my_bids">My Bids</string>
    <string name="button">Button</string>
    <string name="textviewlogin">TextViewLogin</string>
    <string name="already_have_an_account_login">Already have an account, Login</string>
    <string name="Login">Login</string>
    <string name="name_error">Fields cannot be blank</string>
    <string name="start_searching">Start Searching</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="pic_for_maps">pic_for_maps</string>
    <string name="imageview_desc">Task_images</string>
    <string name="AIzaSyDcZkIhHRSyTvvTuDH9pUEHbt9wxaXICO8">google_maps_key</string>
    <string name="search_maps">Search</string>
    <string name="title_activity_adding_task_local">Map</string>
    <string name="selected_task_activity">Selected Task</string>
    <string name="bidding_screen">Biddings</string>
    <string name="main_menu_activity">Main Menu</string>
    <string name="new_task">New Task</string>
    <string name="activity_view_bids">Bids</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_address">Enter Address</string>
    <string name="username">username:</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete Account</string>
    <string name="contact_information">Contact Information</string>

</resources>
